<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ian.applayout.floor.DefaultFragment">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="65dp"
        />

    <Button
        android:text="@string/create_order"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:id="@+id/create_Order_btn"
        android:layout_weight="0.06"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </TableLayout>

    <Button

        android:id="@+id/view_order"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_weight="0.06"
        android:text="@string/view_order"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="65dp"/>
</LinearLayout>
